--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section data-bs-version="5.1" class="menu menu2 cid-sFF0ciwnEL" once="menu" id="menu2-0">
     
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
-        <div class="container">
+        <div class="container-fluid">
             <div class="navbar-brand">
                 
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-7" href="index.html">Nana K VisionTech<br>Solution</a></span>
@@ -253,7 +253,7 @@
         <div class="row content-wrapper justify-content-center">
             <div class="col-lg-4 offset-lg-1 mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="eMCOV1o91X6lcMK2P6BPExxcHDVK8XBZSa2Fg6TJpmdlT4WofRBlxiV6c/2vo2NzHRY38Fe0kOsVy0KHo74OaFhGu5N3YJu7F+5AuWw/su2fIt8faH3XA31jRaGdvSvg">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="t5Uebx8ldtodl9cKrq8QYMdgb5OJVmiDFqjKZeie2s44ufZnG01lxx2sm2+KllTb1SpXuyHvuLsljJ2g+6VF3X+l/AK4kAmmvejrPOlhYQGX8iYaw4NTYDauV08rYG7u">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -377,5 +377,6 @@
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
                     Thank you for visiting, Let's work together to keep your technology running smoothly!&nbsp;<br><br>© 2023 All rights reserved&nbsp;| Developed with Love by Ephraim</p>
-  <input name="animation" type="hidden">
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href=""></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js">
+</script>  <input name="animation" type="hidden">
   </body></html>
